--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "phosphor-ts",
+  "name": "phosphor-universal",
   "version": "0.0.1",
   "description": "Icon catalog and assets for Phosphor",
   "license": "MIT",
