fix module resolution

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
       "require": "./dist/index.umd.js",
       "types": "./dist/index.d.ts"
     },
-    "./icons.js": "./dist/icons.js",
+    "./icons.mjs": "./dist/icons.mjs",
     "./assets/bold/*.svg": "./assets/bold/*.svg",
     "./assets/duotone/*.svg": "./assets/duotone/*.svg",
     "./assets/fill/*.svg": "./assets/fill/*.svg",
@@ -53,7 +53,7 @@
   "packageManager": "bun",
   "scripts": {
     "prebuild": "bun x tsx ./scripts/gen-icons.ts",
-    "postbuild": "cp ./src/icons.* ./dist/",
+    "postbuild": "cp ./src/icons.mjs ./src/icons.mjs.d.ts ./dist/",
     "collate": "tsx ./scripts/collate.ts",
     "catalog": "tsx ./scripts/catalog.ts && pnpm format",
     "format": "prettier --write ./src/** ./scripts/**",
